// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<table
  className="data zebra fixed spacer-bottom"
>
  <thead>
    <tr>
      <th>
        settings.pr_decoration.table.column.name
      </th>
      <th>
        settings.pr_decoration.table.column.bitbucket.url
      </th>
      <th
        className="action-small text-center"
      >
        settings.pr_decoration.table.column.edit
      </th>
      <th
        className="action text-center"
      >
        settings.pr_decoration.table.column.delete
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        colSpan={4}
      >
        settings.pr_decoration.table.empty.bitbucket
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render correctly 2`] = `
<table
  className="data zebra fixed spacer-bottom"
>
  <thead>
    <tr>
      <th>
        settings.pr_decoration.table.column.name
      </th>
      <th>
        settings.pr_decoration.table.column.bitbucket.url
      </th>
      <th
        className="action-small text-center"
      >
        settings.pr_decoration.table.column.edit
      </th>
      <th
        className="action text-center"
      >
        settings.pr_decoration.table.column.delete
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      key="key"
    >
      <td
        className="nowrap hide-overflow"
        title="key"
      >
        key
      </td>
      <td
        className="nowrap hide-overflow"
        title="http://bbs.enterprise.com"
      >
        http://bbs.enterprise.com
      </td>
      <td
        className="text-center"
      >
        <ButtonIcon
          onClick={[Function]}
        >
          <EditIcon />
        </ButtonIcon>
      </td>
      <td
        className="text-center"
      >
        <DeleteButton
          onClick={[Function]}
        />
      </td>
    </tr>
  </tbody>
</table>
`;
